[workspace]
members = [
  ".",
  "crates/html-egui-bindgen",
  "crates/html-to-egui",
  "examples/counter",
  "examples/datetime",
  "examples/login",
  "examples/random",
]

[package]
name = "rdx"
version = "0.2.1"
authors = ["Doug Anderson <doug@peerpiper.io>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.78"
default-run = "rdx"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

# [[bin]]
# name = "force-build-wasm-bins"
# path = "build.rs"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
wasm_component_layer = "0.1.18"
wasm_runtime_layer = "0.4"
rand = "0.8"
time = "0.3"
async-trait = "0.1.83"
anyhow = "1.0.93"
futures-lite = "2.5.0"
send_wrapper = "0.6"
parking_lot = "0.12"
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"
markup5ever = "0.12.0"
html-to-egui = { path = "crates/html-to-egui" }
ahash = "0.8.11"

# For native builds:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rhai = { version = "1.19", features = ["sync", "serde"] }
wasmparser = "0.221"
# TODO: Feature gate this: Could choose wasmi or wasmtime.
wasmtime_runtime_layer = "26.0.0"
tokio = { version = "1", features = ["full"] }

# For web builds:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"                                                        # to access the DOM (to hide the loading text)
getrandom = { version = "0.2", features = ["js"] }                        # For web builds
rhai = { version = "1.19", features = ["wasm-bindgen", "sync", "serde"] }
js_wasm_runtime_layer = "0.4.0"
anyhow = "1.0"
send_wrapper = { version = "0.6.0", features = ["futures"] }
web-time = "1.1.0"

[build-dependencies]
wasmparser = "0.221"

[dev-dependencies]
html-egui-bindgen = { path = "crates/html-egui-bindgen" }
test-log = "0.2.16"

[profile.release]
opt-level = 2 # fast and small wasm
# codegen-units = 1
# opt-level = "s"
# debug = false
# strip = true
# lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }


# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
