[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[dev-dependencies]
wasmtime = { version = "25" }
wasmtime-wasi = "25"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:counter"

[package.metadata.component.dependencies]
