# cargo-features = ["per-package-target"]

[package]
name = "counter"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }

[dev-dependencies]
wasmtime = { version = "25" }
wasmtime-wasi = "25"
thiserror = "1.0"

[build-dependencies]
html-to-egui = { path = "../../crates/html-to-egui" }
html-egui-bindgen = { path = "../../crates/html-egui-bindgen" }
rhai = "1.20.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:counter"

[package.metadata.component.dependencies]
