[package]
name = "datetime"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }
chrono = { version = "0.4", default-features = false, features = [
  "alloc",
  "clock",
] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:datetime"

[package.metadata.component.dependencies]
