[package]
name = "datetime"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }
slab = "0.4.9"
anyhow = "1.0"
futures = "0.3.31"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:datetime"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:poll" = { path = "wit/deps" }
