[package]
name = "random"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }
getrandom = { version = "0.2", features = ["custom"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:random"

[package.metadata.component.dependencies]
